[tool.poetry]
name = "repurpose-scraper"
version = "0.1.0"
description = "extract social CSV from repurpose.io"
authors = ["John Vandivier <john@ladderly.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "repurpose_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
